// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hook in describe with skipped test 1`] = `
Object {
  "rest": "",
  "summary": "Test Suites: 1 skipped, 0 of 1 total
Tests:       1 skipped, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /hookInDescribeWithSkippedTest.test.js/i.",
}
`;

exports[`hook in empty describe 1`] = `
Object {
  "rest": "FAIL __tests__/hookInEmptyDescribe.test.js


  ● Test suite failed to run

    Invalid: beforeEach() may not be used in a describe block containing no tests.

       7 | 
       8 | describe('a block', () => {
    >  9 |   beforeEach(() => {});
         |   ^
      10 | });
      11 | 
      12 | describe('another block with tests', () => {

<<<<<<< HEAD:e2e/__tests__/__snapshots__/emptyDescribeWithHooks.test.js.snap
      at __tests__/hookInEmptyDescribe.test.js:9:3
      at __tests__/hookInEmptyDescribe.test.js:8:1
=======
      at beforeEach (__tests__/hook-in-empty-describe.test.js:9:3)
      at Object.describe (__tests__/hook-in-empty-describe.test.js:8:1)
>>>>>>> upstream/master:e2e/__tests__/__snapshots__/empty-describe-with-hooks.test.js.snap

",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /hookInEmptyDescribe.test.js/i.
",
}
`;

exports[`hook in empty nested describe 1`] = `
Object {
  "rest": "FAIL __tests__/hookInEmptyNestedDescribe.test.js


  ● Test suite failed to run

    Invalid: beforeEach() may not be used in a describe block containing no tests.

       7 | 
       8 | describe('a block', () => {
    >  9 |   beforeEach(() => {});
         |   ^
      10 |   describe('another block', () => {});
      11 | });
      12 | 

<<<<<<< HEAD:e2e/__tests__/__snapshots__/emptyDescribeWithHooks.test.js.snap
      at __tests__/hookInEmptyNestedDescribe.test.js:9:3
      at __tests__/hookInEmptyNestedDescribe.test.js:8:1
=======
      at beforeEach (__tests__/hook-in-empty-nested-describe.test.js:9:3)
      at Object.describe (__tests__/hook-in-empty-nested-describe.test.js:8:1)
>>>>>>> upstream/master:e2e/__tests__/__snapshots__/empty-describe-with-hooks.test.js.snap

",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /hookInEmptyNestedDescribe.test.js/i.
",
}
`;

exports[`multiple hooks in empty describe 1`] = `
Object {
  "rest": "FAIL __tests__/multipleHooksInEmptyDescribe.test.js


  ● Test suite failed to run

    Invalid: beforeEach() may not be used in a describe block containing no tests.

       7 | 
       8 | describe('a block', () => {
    >  9 |   beforeEach(() => {});
         |   ^
      10 |   afterEach(() => {});
      11 |   afterAll(() => {});
      12 |   beforeAll(() => {});

<<<<<<< HEAD:e2e/__tests__/__snapshots__/emptyDescribeWithHooks.test.js.snap
      at __tests__/multipleHooksInEmptyDescribe.test.js:9:3
      at __tests__/multipleHooksInEmptyDescribe.test.js:8:1
=======
      at beforeEach (__tests__/multiple-hooks-in-empty-describe.test.js:9:3)
      at Object.describe (__tests__/multiple-hooks-in-empty-describe.test.js:8:1)
>>>>>>> upstream/master:e2e/__tests__/__snapshots__/empty-describe-with-hooks.test.js.snap

  ● Test suite failed to run

    Invalid: afterEach() may not be used in a describe block containing no tests.

       8 | describe('a block', () => {
       9 |   beforeEach(() => {});
    > 10 |   afterEach(() => {});
         |   ^
      11 |   afterAll(() => {});
      12 |   beforeAll(() => {});
      13 | });

<<<<<<< HEAD:e2e/__tests__/__snapshots__/emptyDescribeWithHooks.test.js.snap
      at __tests__/multipleHooksInEmptyDescribe.test.js:10:3
      at __tests__/multipleHooksInEmptyDescribe.test.js:8:1
=======
      at afterEach (__tests__/multiple-hooks-in-empty-describe.test.js:10:3)
      at Object.describe (__tests__/multiple-hooks-in-empty-describe.test.js:8:1)
>>>>>>> upstream/master:e2e/__tests__/__snapshots__/empty-describe-with-hooks.test.js.snap

  ● Test suite failed to run

    Invalid: afterAll() may not be used in a describe block containing no tests.

       9 |   beforeEach(() => {});
      10 |   afterEach(() => {});
    > 11 |   afterAll(() => {});
         |   ^
      12 |   beforeAll(() => {});
      13 | });
      14 | 

<<<<<<< HEAD:e2e/__tests__/__snapshots__/emptyDescribeWithHooks.test.js.snap
      at __tests__/multipleHooksInEmptyDescribe.test.js:11:3
      at __tests__/multipleHooksInEmptyDescribe.test.js:8:1
=======
      at afterAll (__tests__/multiple-hooks-in-empty-describe.test.js:11:3)
      at Object.describe (__tests__/multiple-hooks-in-empty-describe.test.js:8:1)
>>>>>>> upstream/master:e2e/__tests__/__snapshots__/empty-describe-with-hooks.test.js.snap

  ● Test suite failed to run

    Invalid: beforeAll() may not be used in a describe block containing no tests.

      10 |   afterEach(() => {});
      11 |   afterAll(() => {});
    > 12 |   beforeAll(() => {});
         |   ^
      13 | });
      14 | 
      15 | describe('another block with tests', () => {

<<<<<<< HEAD:e2e/__tests__/__snapshots__/emptyDescribeWithHooks.test.js.snap
      at __tests__/multipleHooksInEmptyDescribe.test.js:12:3
      at __tests__/multipleHooksInEmptyDescribe.test.js:8:1
=======
      at beforeAll (__tests__/multiple-hooks-in-empty-describe.test.js:12:3)
      at Object.describe (__tests__/multiple-hooks-in-empty-describe.test.js:8:1)
>>>>>>> upstream/master:e2e/__tests__/__snapshots__/empty-describe-with-hooks.test.js.snap

",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /multipleHooksInEmptyDescribe.test.js/i.
",
}
`;
